[package]
name = "lua"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
css-style = "0.14.1"
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
fontdb = "0.23.0"
harfrust = "0.1.1"
kurbo = "0.11.3"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.1"
voronator = "0.2.1"
rhai = "1.22.2"
svg = "0.18.0"
ttf-parser = "0.25.1"
unicode-segmentation = "1.12.0"
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"

[build-dependencies]
chumsky = "1.0.0-alpha.8"
steel-core = { git = "https://github.com/mattwparas/steel.git", branch = "master" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
toml = "1.0.6"

