[package]
name = "badger"
version = "0.1.0"
edition = "2024"

[dependencies]
css-style = "0.14.1"
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
fontdb = "0.23.0"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.1"
voronator = "0.2.1"
svg = "0.18.0"
skrifa = "0.40.0"
unicode-segmentation = "1.12.0"
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
harfrust = "0.5.2"
kurbo = "0.13.0"
glob = "0.3.3"
comrak = "0.51.0"
base64 = "0.22.1"

[build-dependencies]
chumsky = "1.0.0-alpha.8"
steel-core = { git = "https://github.com/mattwparas/steel.git", branch = "master" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
toml = "1.0.6"

